--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ scala:
 after_success:
   - eval "$(ssh-agent -s)"
   - ssh-add ~/.ssh/id_rsa
+  - git config user.email "ski.rodriguez@gmail.com"
+  - git config user.name "Travis CI"
   - sbt ghpagesPushSite
 env:
   global:
